--- a/app/views/data/filters.html
+++ b/app/views/data/filters.html
@@ -5,8 +5,8 @@
 	</div>
 	<div ng-if="vm.filters.localities.length > 0">
 		<hr>
-		<div style="margin-bottom:10px;"><a href="" ng-click="vm.showLocalityFilters = !vm.showLocalityFilters;" data-toggle="collapse" data-target="#localityDiv"><i ng-class="!vm.showLocalityFilters ? 'fa fa-plus' : 'fa fa-minus'"></a></i><b> Localities</b><!-- <i class="fa fa-globe"></i> --></div>
-			<div id="localityDiv" class="collapse in">
+		<div style="margin-bottom:10px;"><a href="" ng-click="vm.expandCollapseLocalitiesFilter();"><i ng-class="!vm.showLocalityFilters ? 'fa fa-plus' : 'fa fa-minus'"></a></i><b> Localities</b><!-- <i class="fa fa-globe"></i> --></div>
+			<div id="localitiesDiv" class="collapse in">
 				<div ng-class="filter.checked ? 'checkbox checkbox-primary' : 'checkbox'" ng-repeat="filter in vm.filters.localities">
 				    <input ng-model='filter.checked' type='checkbox'>
 				    <label for="localityCheckBoxes">
@@ -18,8 +18,8 @@
 
 	<div ng-if="vm.filters.eventType.length > 0">
 		<hr>
-		<div style="margin-bottom:10px;"><a href="" ng-click="vm.showEventsFilters = !vm.showEventsFilters;" data-toggle="collapse" data-target="#eventDiv"><i ng-class="!vm.showEventsFilters ? 'fa fa-plus' : 'fa fa-minus'"></a></i><b> Event Type</b></div>
-			<div id="eventDiv" class="collapse in">
+		<div style="margin-bottom:10px;"><a href="" ng-click="vm.expandCollapseEventTypeFilter();" ><i ng-class="!vm.showEventsFilters ? 'fa fa-plus' : 'fa fa-minus'"></a></i><b> Event Type</b></div>
+			<div id="eventTypeDiv" class="collapse in">
 				<div ng-class="filter.checked ? 'checkbox checkbox-primary' : 'checkbox'" ng-repeat="filter in vm.filters.eventType">
 				    <input ng-model='filter.checked' type='checkbox'>
 				    <label for="estCheckBoxes">
@@ -32,8 +32,8 @@
 	
 	<div ng-if="vm.filters.establishments.length > 0">
 		<hr>
-		<div style="margin-bottom:10px;"><a href="" ng-click="vm.showEstablishmentFilters = !vm.showEstablishmentFilters;" data-toggle="collapse" data-target="#establishmentDiv"><i ng-class="!vm.showEstablishmentFilters ? 'fa fa-plus' : 'fa fa-minus'"></a></i><b> Establishment Type</b></div>
-			<div id="establishmentDiv" class="collapse in">
+		<div style="margin-bottom:10px;"><a href="" ng-click="vm.expandCollapseEstablishmentsFilter();"><i ng-class="!vm.showEstablishmentFilters ? 'fa fa-plus' : 'fa fa-minus'"></a></i><b> Establishment Type</b></div>
+			<div id="establishmentsDiv" class="collapse in">
 				<div ng-class="filter.checked ? 'checkbox checkbox-primary' : 'checkbox'" ng-repeat="filter in vm.filters.establishments">
 				    <input ng-model='filter.checked' type='checkbox'>
 				    <label for="estCheckBoxes">
@@ -45,8 +45,8 @@
 
 	<div ng-if="vm.filters.entertainmentType.length > 0">
 		<hr>
-		<div style="margin-bottom:10px;"><a href="" ng-click="vm.showRentalFilters = !vm.showRentalFilters;" data-toggle="collapse" data-target="#rentalDiv"><i ng-class="!vm.showRentalFilters ? 'fa fa-plus' : 'fa fa-minus'"></a></i><b> Entertainment Type</b></div>
-			<div id="rentalDiv" class="collapse in">
+		<div style="margin-bottom:10px;"><a href="" ng-click="vm.expandCollapseEntertainmentTypeFilter();"><i ng-class="!vm.showRentalFilters ? 'fa fa-plus' : 'fa fa-minus'"></a></i><b> Entertainment Type</b></div>
+			<div id="entertainmentTypeDiv" class="collapse in">
 				<div ng-class="filter.checked ? 'checkbox checkbox-primary' : 'checkbox'" ng-repeat="filter in vm.filters.entertainmentType">
 				    <input ng-model='filter.checked' type='checkbox'>
 				    <label for="rentalCheckBoxes">
@@ -58,8 +58,8 @@
 
 	<div ng-if="vm.filters.othersType.length > 0">
 		<hr>
-		<div style="margin-bottom:10px;"><a href="" ng-click="vm.showOtherFilters = !vm.showOtherFilters;" data-toggle="collapse" data-target="#othersDiv"><i ng-class="!vm.showOtherFilters ? 'fa fa-plus' : 'fa fa-minus'"></a></i><b> Service Type</b><!-- <i class="fa fa-globe"></i> --></div>
-			<div id="othersDiv" class="collapse in">
+		<div style="margin-bottom:10px;"><a href="" ng-click="vm.expandCollapseOthersTypeFilter();"><i ng-class="!vm.showOtherFilters ? 'fa fa-plus' : 'fa fa-minus'"></a></i><b> Service Type</b><!-- <i class="fa fa-globe"></i> --></div>
+			<div id="othersTypeDiv" class="collapse in">
 				<div ng-class="filter.checked ? 'checkbox checkbox-primary' : 'checkbox'" ng-repeat="filter in vm.filters.othersType">
 				    <input ng-model='filter.checked' type='checkbox'>
 				    <label for="otherCheckBoxes">
@@ -70,13 +70,13 @@
 	</div>
 
 	<hr ng-if="vm.filters.carType.length > 0 || vm.filters.bandType.length > 0 || vm.filters.amenities.length > 0|| vm.filters.rooms.length > 0 || vm.filters.services.length > 0 || vm.filters.priceRange.length > 0">
-	<h4 ng-if="vm.filters.carType.length > 0 || vm.filters.bandType.length > 0 || vm.filters.amenities.length > 0|| vm.filters.rooms.length > 0 || vm.filters.services.length > 0 || vm.filters.priceRange.length > 0" class='theme-color'><a href="" ng-click="vm.showMoreFilters = !vm.showMoreFilters;" data-toggle="collapse" data-target="#moreFilterDiv"><i ng-class="!vm.showMoreFilters ? 'fa fa-plus' : 'fa fa-minus'"></a></i> View More Filters</h4>
+	<h4 ng-if="vm.filters.carType.length > 0 || vm.filters.bandType.length > 0 || vm.filters.amenities.length > 0|| vm.filters.rooms.length > 0 || vm.filters.services.length > 0 || vm.filters.priceRange.length > 0" class='theme-color'><a href="" ng-click="vm.expandCollapseMoreFilter();"><i ng-class="!vm.showMoreFilters ? 'fa fa-plus' : 'fa fa-minus'"></i></a> View More Filters</h4>
 
 <div id="moreFilterDiv" class="collapse" >
 	<div ng-if="vm.filters.carType.length > 0">
 		<hr>
-		<div style="margin-bottom:10px;"><a href="" ng-click="vm.showCarFilters = !vm.showCarFilters;" data-toggle="collapse" data-target="#carDiv"><i ng-class="!vm.showCarFilters ? 'fa fa-plus' : 'fa fa-minus'"></a></i><b> Car Type</b></div>
-			<div id="carDiv" class="collapse">
+		<div style="margin-bottom:10px;"><a href="" ng-click="vm.expandCollapseCarTypeFilter();"><i ng-class="!vm.showCarFilters ? 'fa fa-plus' : 'fa fa-minus'"></a></i><b> Car Type</b></div>
+			<div id="carTypeDiv" class="collapse">
 				<div ng-class="filter.checked ? 'checkbox checkbox-primary' : 'checkbox'" ng-repeat="filter in vm.filters.carType">
 				    <input ng-model='filter.checked' type='checkbox'>
 				    <label for="carCheckBoxes">
@@ -88,8 +88,8 @@
 
 	<div ng-if="vm.filters.bandType.length > 0">
 		<hr>
-		<div style="margin-bottom:10px;"><a href="" ng-click="vm.showBandFilters = !vm.showBandFilters;" data-toggle="collapse" data-target="#bandDiv"><i ng-class="!vm.showBandFilters ? 'fa fa-plus' : 'fa fa-minus'"></a></i><b> Band Type</b></div>
-			<div id="bandDiv" class="collapse">
+		<div style="margin-bottom:10px;"><a href="" ng-click="vm.expandCollapseBandTypeFilter();"><i ng-class="!vm.showBandFilters ? 'fa fa-plus' : 'fa fa-minus'"></a></i><b> Band Type</b></div>
+			<div id="bandTypeDiv" class="collapse">
 				<div ng-class="filter.checked ? 'checkbox checkbox-primary' : 'checkbox'" ng-repeat="filter in vm.filters.bandType">
 				    <input ng-model='filter.checked' type='checkbox'>
 				    <label for="bandCheckBoxes">
@@ -101,8 +101,8 @@
 	
 	<div ng-if="vm.filters.amenities.length > 0">
 		<hr>
-		<div style="margin-bottom:10px;"><a href="" ng-click="vm.showAmenityFilters = !vm.showAmenityFilters;" data-toggle="collapse" data-target="#amenityDiv"><i ng-class="!vm.showAmenityFilters ? 'fa fa-plus' : 'fa fa-minus'"></a></i><b> Amenities</b><!-- <i class="space fa fa-building"></i> --></div>
-			<div id="amenityDiv" class="collapse">
+		<div style="margin-bottom:10px;"><a href="" ng-click="vm.expandCollapseAmenitiesFilter();"><i ng-class="!vm.showAmenityFilters ? 'fa fa-plus' : 'fa fa-minus'"></a></i><b> Amenities</b><!-- <i class="space fa fa-building"></i> --></div>
+			<div id="amenitiesDiv" class="collapse">
 				<div ng-class="filter.checked ? 'checkbox checkbox-primary' : 'checkbox'" ng-repeat="filter in vm.filters.amenities">
 				    <input ng-model='filter.checked' type='checkbox'>
 				    <label for="amenityCheckBoxes">
@@ -114,8 +114,8 @@
 	
 	<div ng-if="vm.filters.rooms.length > 0">
 		<hr>
-		<div style="margin-bottom:10px;"><a href="" ng-click="vm.showRoomFilters = !vm.showRoomFilters;" data-toggle="collapse" data-target="#roomDiv"><i ng-class="!vm.showRoomFilters ? 'fa fa-plus' : 'fa fa-minus'"></a></i><b> Room Type</b></div>
-			<div id="roomDiv" class="collapse">
+		<div style="margin-bottom:10px;"><a href="" ng-click="vm.expandCollapseRoomsFilter();"><i ng-class="!vm.showRoomFilters ? 'fa fa-plus' : 'fa fa-minus'"></a></i><b> Room Type</b></div>
+			<div id="roomsDiv" class="collapse">
 				<div ng-class="filter.checked ? 'checkbox checkbox-primary' : 'checkbox'" ng-repeat="filter in vm.filters.rooms">
 				    <input ng-model='filter.checked' type='checkbox'>
 				    <label for="roomCheckBoxes">
@@ -128,8 +128,8 @@
 	
 	<div ng-if="vm.filters.services.length > 0">
 		<hr>
-		<div style="margin-bottom:10px;"><a href="" ng-click="vm.showServiceFilters = !vm.showServiceFilters;" data-toggle="collapse" data-target="#serviceDiv"><i ng-class="!vm.showServiceFilters ? 'fa fa-plus' : 'fa fa-minus'"></a></i><b> Services</b></div>
-		<div id="serviceDiv" class="collapse">
+		<div style="margin-bottom:10px;"><a href="" ng-click="vm.expandCollapseServicesFilter();"><i ng-class="!vm.showServiceFilters ? 'fa fa-plus' : 'fa fa-minus'"></a></i><b> Services</b></div>
+		<div id="servicesDiv" class="collapse">
 			<div  ng-class="filter.checked ? 'checkbox checkbox-primary' : 'checkbox'" ng-repeat="filter in vm.filters.services">
 		    	<input class="styled" ng-model='filter.checked' type='checkbox'>
 		    	<label for="serviceCheckBoxes">
@@ -143,8 +143,8 @@
 
 	<div ng-if="vm.filters.priceRange.length > 0">
 		<hr>
-		<div style="margin-bottom:10px;"><a href="" ng-click="vm.showPriceFilters = !vm.showPriceFilters;" data-toggle="collapse" data-target="#priceDiv"><i ng-class="!vm.showPriceFilters ? 'fa fa-plus' : 'fa fa-minus'"></a></i><b> Price Range</b><!-- <i class="fa fa-globe"></i> --></div>
-			<div id="priceDiv" class="collapse">
+		<div style="margin-bottom:10px;"><a href="" ng-click="vm.expandCollapsePriceRangeFilter();"><i ng-class="!vm.showPriceFilters ? 'fa fa-plus' : 'fa fa-minus'"></a></i><b> Price Range</b><!-- <i class="fa fa-globe"></i> --></div>
+			<div id="priceRangeDiv" class="collapse">
 				<div ng-class="filter.checked ? 'checkbox checkbox-primary' : 'checkbox'" ng-repeat="filter in vm.filters.priceRange">
 				    <input ng-model='filter.checked' type='checkbox'>
 				    <label for="priceRangeCheckBoxes">
@@ -156,6 +156,5 @@
 </div>
 
 	<hr>
-
 
 </div>
