--- a/app/views/badrequest/badrequest.html
+++ b/app/views/badrequest/badrequest.html
@@ -1,15 +1,18 @@
-<div class="row bad-request-section">
-	<div class="col-xs-12 text-center bg-grey">
+<div class="bad-request-section">
+	
+	<div class="container">
+		<div class="row">
+		<div class="col-xs-12 text-center bg-grey">
 		<h1>400, Bad Request</h1>
 		<div class="gap20"></div>
 	</div>
-	<div class="container">
+</div>
 		<div class="row">
-			<div class="col-xs-12 col-sm-6 marginTopBottom20">
+			<div class="col-xs-12 col-sm-6 marginTopBottom20 vcenter">
 				<img src='/images/bad_request_400.png' class='img-responsive'/>
-			</div>
-			<div class="col-xs-12 col-sm-6 marginTopBottom20">
-				<div>
+			</div><!--
+			--><div class="col-xs-12 col-sm-6 marginTopBottom20 vcenter">
+				<div class="text-center">
 					<p class="fontSize16">
 						Your browser just sent a request that this server could not understand.
 						So either contact the system administrator or click back to homepage button.
