--- a/app/views/home/home.html
+++ b/app/views/home/home.html
@@ -1,6 +1,6 @@
 <section class="row">
 	<div class="col-xs-12">
-		<h4 class="theme-color subcategory-heading">{{vm.selectedCategory}} INCLUDES:</h4>
+		<h4 class="theme-color subcategory-heading">{{vm.selectedCategory}} INCLUDES</h4>
 						<!-- Sub Category Carousel -->
 						<div class="subcategory-carousel">
 							<div class="swiper-container subcategory-swiper-container" data-ng-repeat="(key,value) in vm.subCategoriesMap" ng-class="'{{key}}'" data-ng-show="vm.selectedCategory == '{{key}}'">
